# Advanced_Python_Learning

./: Orms.md  api.md  django_works.md  pyproject.toml
OOP/: OOP.md
OOPs/: OOP.md  firstclass.py  pyproject.toml
OOPs/Mobile_apps/: .button.kv.swp  Hello_kivy.py  Kivy_Box_layout.py  Kivy_button_kv_langauge.py  Kivy_image.py  app_dev_kivy.md  pyproject.toml
OOPs/Mobile_apps/Apps/Calculator_app/: calculator.kv  calculator_program.py
OOPs/Numpycode/: Numpy.md  firstfile.py
OOPs/Pandascode/: Pandasfile.ipynb  data.js:Zone.Identifier  dirtydata.csv:Zone.Identifier  pandas.md  pandas_file.py
OOPs/Pandascode/.ipynb_checkpoints/: Pandasfile-checkpoint.ipynb
OOPs/oop/: firstclass.py  student_objs.py
OOPs/tests/: test_first_class.py  test_oop.py
Patterns/: patterns.md
Tests/: tests.md
trial_project1/: manage.py
trial_project1/myapp1/: url.py  views.py
trial_project1/myapp1/templates/Base/: index.html  main_template.html
trial_project1/trial_project1/: asgi.py  settings.py  urls.py  wsgi.py
