[tool.poetry]
name = "OOPs"
version = "0.1.0"
description = ""
authors = ["gio <gio.harvey14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.1"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
