[tool.poetry]
name = "Mobile_app_dev"
version = "0.1.0"
description = "Here I work on developing mobile apps with python"
authors = ["Gio <gio.harvey14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Kivy = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
